--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: landing
 
 <div id="panel">
   <div class="slice logo">
-    <img src="#"/>
+    <img src="images/inovex_logo_square.png"/>
     <h1>{{ site.title }}</h1>
     <p>
       Wir schaffen Technologien 
@@ -19,9 +19,9 @@ layout: landing
       hoch aktuellen Technologi3n.
     </p>
     <ul>
-      <li><a href="/lob_ad/java">Java</a></li>
-      <li><a href="/lob_ad/ruby">Ruby</a></li>
-      <li><a href="/lob_ad/net">.Net</a></li>
+      <li><a href="/lob_ad#java">Java</a></li>
+      <li><a href="/lob_ad#ruby">Ruby</a></li>
+      <li><a href="/lob_ad#dotnet">.Net</a></li>
     </ul>
   </div>
   <div class="slice">
