moved the logo to the css and removed annoying text

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ layout: landing
 
 <div id="panel">
   <div class="slice logo">
-    <img src="images/inovex_logo_square.png"/>
-    <h1>{{ site.title }}</h1>
+    <h1><span>{{ site.title }}</span></h1>
     <p>
       Wir schaffen Technologien 
       die andere gl&uuml;cklich machen
