make anchors around the landing page headers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: landing
     </p>
   </div>
   <div class="slice">
-    <h2>Application Development</h2>
+    <h2><a href="/lob_ad">Application Development</a></h2>
     <p>
       Entwicklung modern3r Architekturen und
       Anwendungen durch Verwendung von
@@ -24,7 +24,7 @@ layout: landing
     </ul>
   </div>
   <div class="slice">
-    <h2>Business Engineering</h2>
+    <h2><a href="/lob_bi">Business Engineering</a></h2>
     <p>
       Integration der Businesswelt durch
       Einsatz der Microsoft und OpenSource
@@ -36,7 +36,7 @@ layout: landing
     </ul>
   </div>
   <div class="slice">
-    <h2>Systems Engineering</h2>
+    <h2><a href="/lob_se">Systems Engineering</a></h2>
     <p>
       Die Perlen der Systemadministration warten
       unter gro&szlig;em Einsatz riesige 
