little improvement for the landing page item list style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: landing
       hoch aktuellen Technologi3n.
     </p>
     <ul>
-      <li><a href="/lob_ad#java">Java</a></li>
+      <li class="first"><a href="/lob_ad#java">Java</a></li>
       <li><a href="/lob_ad#ruby">Ruby</a></li>
       <li><a href="/lob_ad#dotnet">.Net</a></li>
     </ul>
@@ -31,7 +31,7 @@ layout: landing
       BI-L&ouml;sungen. Schon mal einen Cube gesehen?
     </p>
     <ul>
-      <li><a href="#">Microsoft BI</a></li>
+      <li class="first"><a href="#">Microsoft BI</a></li>
       <li><a href="#">OpenSource BI</a></li>
     </ul>
   </div>
@@ -43,7 +43,7 @@ layout: landing
       voll automatisierte Serverfarmen. 
     </p>
     <ul>
-      <li><a href="#">Automatisierung</a></li>
+      <li class="first"><a href="#">Automatisierung</a></li>
       <li><a href="#">Soforthilfe</a></li>
     </ul>
   </div>
