added lob bi, se and added better layouting and templating for all lobs

--- a/lob_ad/index.html
+++ b/lob_ad/index.html
@@ -1,8 +1,7 @@
 ---
-layout: lob
+layout: lob_ad
 title: Application Development
+lob: ad
 ---
 
-<div class="content">
-  {% include content_placeholder.html %}
-</div>
+{% include content_placeholder.html %}
