--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ layout: landing
       BI-L&ouml;sungen. Schon mal einen Cube gesehen?
     </p>
     <ul>
-      <li class="first"><a href="#">Microsoft BI</a></li>
-      <li><a href="#">OpenSource BI</a></li>
+      <li class="first"><a href="/lob_bi">Microsoft BI</a></li>
+      <li><a href="/lob_bi">OpenSource BI</a></li>
     </ul>
   </div>
   <div class="slice">
@@ -43,8 +43,8 @@ layout: landing
       voll automatisierte Serverfarmen. 
     </p>
     <ul>
-      <li class="first"><a href="#">Automatisierung</a></li>
-      <li><a href="#">Soforthilfe</a></li>
+      <li class="first"><a href="/lob_se">Automatisierung</a></li>
+      <li><a href="/lob_se">Soforthilfe</a></li>
     </ul>
   </div>
 </div>
