cleaner landing page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@ layout: landing
   <div class="slice logo">
     <h1><span>{{ site.title }}</span></h1>
     <p>
-      Wir schaffen Technologien 
+      Wir schaffen Technologien <br/>
       die andere gl&uuml;cklich machen
     </p>
   </div>
   <div class="slice">
     <h2><a href="/lob_ad">Application Development</a></h2>
     <p>
-      Entwicklung modern3r Architekturen und
-      Anwendungen durch Verwendung von
-      hoch aktuellen Technologi3n.
+      <a href="/lob_ad">
+        Entwicklung modern3r Architekturen und
+        Anwendungen durch Verwendung von
+        hoch aktuellen Technologi3n.
+      </a>
     </p>
     <ul>
       <li class="first"><a href="/lob_ad#java">Java</a></li>
@@ -26,9 +28,11 @@ layout: landing
   <div class="slice">
     <h2><a href="/lob_bi">Business Engineering</a></h2>
     <p>
+      <a href="/lob_bi">
       Integration der Businesswelt durch
       Einsatz der Microsoft und OpenSource
       BI-L&ouml;sungen. Schon mal einen Cube gesehen?
+      </a>
     </p>
     <ul>
       <li class="first"><a href="#">Microsoft BI</a></li>
@@ -38,9 +42,11 @@ layout: landing
   <div class="slice">
     <h2><a href="/lob_se">Systems Engineering</a></h2>
     <p>
+      <a href="/lob_se">
       Die Perlen der Systemadministration warten
       unter gro&szlig;em Einsatz riesige 
-      voll automatisierte Serverfarmen. 
+      voll automatisierte Serverfarmen.
+      </a>
     </p>
     <ul>
       <li class="first"><a href="#">Automatisierung</a></li>
